src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Case_Note_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Case Note Entry successfully created and Activity Associated.</inlineHelpText>
        <label>Case Note Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Merge_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document Merge Completed</description>
        <inlineHelpText>Used to indicate when an Activity is the result of a Conga document merge</inlineHelpText>
        <label>Document Merge Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Case_Note_Entry_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag when an error occurs during automatic Case Note Entry creation.</inlineHelpText>
        <label>Error Case Note Entry Creation Error</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>